2006-01-05  Callum McKenzie  <callum@spooky-possum.org>

	* othello.c: 
	* othello.h:
	* gnothello.c:	
	* gnothello.h: New AI from math1@nifty.com. The original patch in
	bug #312048 has been cleaned up a little to suit the style of the
	rest of the source. A few other minor alterations where also
	made. The calls to rand/srand have been replaced with their g_rand
	cousins.

2005-08-06  Callum McKenzie  <callum@physics.otago.ac.nz>

	* help/C/iagno.xml:  Remove the mention of the
	no-longer-existing bug reporting guidelines. See bug #312723.

2005-07-30  Callum McKenzie  <callum@physics.otago.ac.nz>

	* help/C/figures/*:
	* help/C/iagno.xml: Bump the appversion number and update the
	screenshots.

2005-06-05  Callum McKenzie  <callum@physics.otago.ac.nz>

	* othello.c: 
	* properties.c: 
	* gnothello.c: Remove the clock. It was once, a long, long, time
	ago used to keep some sort of score for the game. By removing it
	we remove a lot of "special-case" code.
	(button_press_event): Check whether we are actually playing a game
	before accepting a click. This should fix bug #305999.

2005-04-11  Richard Hoelscher  <rah@rahga.com>

	* gnothello.c: Remove commented-out menus for AI strength selection.
	(about_cb): Claim that Iagno was derived from the 1800's
	game of Reversi, since it's the truth. Also, port to GtkAboutDialog.
	(main): Start a new game when the app opens.

2005-03-23  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnothello.c:	
	* properties.c: Patches from Dennis Cranston
	<dennis_cranston@yahoo.com> to make the game more HIG compliant.

2005-03-02  Callum McKenzie  <callum@physics.otago.ac.nz>

	* help/C/iagno.xml: Bump the app version number. No revisions.

2005-01-12  Richard Hoelscher  <rah@rahga.com>

	* othello.h: 
	* othello.c: Fix define for MAX_DEPTH, add defines for winning and
	losing games. Remove the pass tests for AI #1 and #2.

2005-01-11  Richard Hoelscher  <rah@rahga.com>
